Analog zu 'https://www.udemy.com/course/spring-framework-5-beginner-to-guru/learn/lecture/11934754' (Abschnitt 8, Lektion 196)
maven-surefire-plugin mit JUnit5-Unterstützung ist jetzt komplett in maven "by default"

Closes #62