@@ -23,7 +23,6 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <junit-platform.version>5.3.1</junit-platform.version>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
         <!-- Web dependencies for wro4j-maven-plugin -->
         <!-- wro4j-maven-plugin only compatible until bootstrap 3.4.1 -->
@@ -104,30 +103,6 @@
                             <version>${less4j.version}</version>
                         </dependency>
                     </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.0</version>
-                    <configuration>
-                        <forkCount>3</forkCount>
-                        <reuseForks>true</reuseForks>
-                        <argLine>
-                            -Xmx1024m
-                            -XX:MaxPermSize=256m
-                            --illegal-access=permit
-                        </argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.22.0</version>
-                    <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
